surya: overlay: Enable subtle tick vibration when revealing shelf.
 * The stock ROM enables this because our vibrator supports
   subtle "tick" vibration effects. Enable it in our overlays
   to make pulling down the notification shade/QS panel
   feel slightly more interactive.

Change-Id: I0c160694bd9616c8693a659da8db9cf4e59ba4c3
Signed-off-by: Hazama25 <hazamafawkes@gmail.com>
Signed-off-by: yukiterumi006 <yukiterumi006@gmail.com>

--- a/overlay/J20CFrameworks/res/values/config.xml
+++ b/overlay/J20CFrameworks/res/values/config.xml
@@ -596,4 +596,8 @@
 
     <!-- Device model (Build.MODEL) to spoof for netflix, if not empty -->
     <string name="config_netflixSpoofModel" translatable="false">M2101K9G</string>
+
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
 </resources>
